# boba

./: .gitignore  CMakeLists.txt  Makefile  README.md  closure.boba  design.txt  fib.boba  file.stt  lang_ideas.txt  test.boba
.github/workflows/: c-cpp.yml
examples/: closure.boba  fib.boba  indirect.boba
include/: analyzer.h  ast.h  error.h  lexer.h  parser.h  token.h
src/: analyzer.cpp  analyzer.h  ast.h  boba.cpp  bytecode.cpp  bytecode.h  environment.h  environment.h~  error.cpp  error.h  lexer.cpp  lexer.h  parser.cpp  parser.h  processor.cpp  processor.h  runtime.cpp  runtime.h  shell.cpp  stutter.cpp  symbol.h  symbol_table.h  token.h  value.h  value.h~
tests/: arithmetic.test  lexer_test.cpp  runner.cpp  test.cpp  test2.cpp  test_arithmetic.cpp  test_defs.cpp  test_if.cpp  util.h
